# ForzaDesigner6

./: .gitignore  README.md  build_exe.bat  pyproject.toml  requirements.txt  run.bat
fd6/: __main__.py  app.py
fd6/gui/: brand_banner.py  inject_dialog.py  inject_worker.py  main_window.py  preview_panel.py  queue_panel.py  settings_panel.py  splash.py  themes.py  upload_panel.py
fd6/gui/widgets/: __init__.py  drop_zone.py  image_view.py
fd6/inject/: __init__.py  __main__.py  cli.py  discovery.py  fh6_injector.py  hw_breakpoint.py  patterns_io.py  win_process.py
fd6/io/: __init__.py  exporter.py  json_schema.py  redundancy.py  resume.py
fd6/settings/profiles/: best_quality.ini  extreme_quality.ini  fast.ini
fd6/shapegen/: __init__.py  engine.py  render.py  scoring.py  worker.py
fd6/shapegen/shapes/: __init__.py  base.py  circle.py  ellipse.py  rectangle.py  triangle.py
tests/: conftest.py  test_engine_small.py  test_fh6_injector.py  test_json_schema.py  test_pattern_scan.py  test_patterns_io.py  test_shapes.py
