[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fd6"
version = "0.1.0"
description = "Forza Designer 6 — image to vinyl-group shapes for Forza Horizon 6"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
]

[project.scripts]
fd6 = "fd6.app:main"

[tool.setuptools.packages.find]
include = ["fd6*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
